--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix: 
-        lint_check: ['python3 util/lint-commits.py HEAD', 'scripts/check-license', 'scripts/verible-lint', 'scripts/python-lint']
+        lint_check: ['python3 util/lint-commits.py HEAD', 'scripts/check-license', 'scripts/python-lint']
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
@@ -68,7 +68,22 @@ jobs:
         run: python3 -m pip install -r requirements.txt
       - name: Install Bender
         run: make bender
-      - name: Lint commits
+      - name: Lint
         run: ${{ matrix.lint_check }}
         env:
           BENDER: ./bender
+  lint-verilog:
+    runs-on: ubuntu-latest
+    needs: [check-clean, check-stale]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: chipsalliance/verible-linter-action@main
+        with:
+          paths: |
+            $(find . \
+              -not \( -path '*.bender/*' -prune \) \
+              -not \( -path '*morty/*' -prune \) \
+              -not \( -path '*test/*' -prune \) \
+              -not \( -path '*systems/pulpopen/idma_axi_to_mem.sv' -prune \) \
+              -name '*.sv')
+          extra_args: "--rules=-interface-name-style --lint_fatal --parse_fatal --waiver_files util/waiver.verible"
