--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,7 +114,7 @@ jobs:
 
   docs:
     runs-on: ubuntu-latest
-    needs: lint
+    needs: [lint, lint-verilog]
     steps:
       - uses: actions/checkout@v3
       - name: Install Bender
